--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -13,7 +13,7 @@ Welcome to your new Gatsby site.
 Now go build something great.
 
 <div style={{ maxWidth: '300px', marginBottom: '1.45rem' }}>
-  <Image />
+  <Image src="gatsby-astronaut.png"/>
 </div>
 <Link to="/page-2/">Go to page 2</Link>
 
