added toolbar for the main page

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,7 +1,9 @@
 import { Link } from 'gatsby'
 
 import Layout from '../components/layout'
+import Toolbar from '../components/Toolbar'
 import Image from '../components/image'
 import SEO from '../components/seo'
 
 <SEO title="Home" keywords={['gatsby', 'application', 'react']} />
+<Toolbar />
