updated styling and added film description element

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -27,6 +27,7 @@ import films from './../content/films.json'
 			filmRating={film.filmRating}
 			filmDay={film.filmDay}
 			filmWatchDate={film.filmWatchDate}
+			filmDescription={film.filmDescription}
 		/>)
 	}
 </div>
