--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -7,7 +7,7 @@ import FilmItem from '../components/FilmItem'
 import Image from '../components/image'
 import SEO from '../components/seo'
 import PageLoader from '../components/PageLoader';
-
+import { FilmsWrapper } from './../components/styled';
 import films from '../content/films.json'
 
 export default function Index () {
@@ -25,14 +25,7 @@ export default function Index () {
 		<Layout>
 			<SEO title="Home" keywords={['gatsby', 'application', 'react']} />
 			<Toolbar />
-			<div
-				style={{
-					display: 'flex',
-					flexDirection: 'row',
-					flexWrap: 'wrap',
-					justifyContent: 'space-between'
-				}}
-			>
+			<FilmsWrapper>
 				{ films.map((film, index) => 
 					<FilmItem 
 						key={index}
@@ -45,7 +38,7 @@ export default function Index () {
 						filmDescription={film.filmDescription}
 					/>)
 				}
-			</div>
+			</FilmsWrapper>
 		</Layout>
 	)
 }
